k8s/base/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: chat-app
---
apiVersion: v1
kind: Namespace
metadata:
  name: chat-app-prod
