k8s/base/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chatapp-ingress
  namespace: chat-app
  labels:
    name: chatapp-ingress
  annotations:
    ngnix.ingress.kubernetes.io/readwrite-target: /
    ngnix.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - host: chattws.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 5001
